<resources>
    <string name="app_name">FinalApp</string>

    <!-- Login View -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_reset_password">Reset my password</string>
    <string name="login_sign_in_google">Sign In with Google</string>
    <string name="login_forgot_password">I have forgotten my password</string>
    <string name="login_create_account">Create a new account</string>
    <string name="login_go_login">Go back to Login</string>

</resources>
