<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:fillViewport="true"
        tools:context=".activities.ForgotPasswordActivity"
>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email"
                android:textSize="@dimen/login_text_size"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonForgot"/>


        <Button
                android:id="@+id/buttonForgot"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_xl_height"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/login_text_xl_size"
                android:background="@drawable/button_ripple_bg"
                android:text="@string/login_reset_password"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/buttonGoLogIn" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <Button
                android:id="@+id/buttonGoLogIn"
                android:background="@drawable/button_ripple"
                android:text="@string/login_go_login"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/login_text_size"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_xl_height"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />
    </android.support.constraint.ConstraintLayout>
</ScrollView>